syntax = "proto3";

package mpt;

message LeafNode {
    bytes key   = 1;
    bytes value = 2;
}

message ExtNode {
    bytes key  = 1;
    bytes node = 2;
}

message BranchNode {
    repeated bytes children = 1;
    bytes          target   = 2;
}